k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusajs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storefront-service
            port:
              number: 3000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: medusa-backend-service
            port:
              number: 9000
      - path: /store
        pathType: Prefix
        backend:
          service:
            name: medusa-backend-service
            port:
              number: 9000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: medusa-backend-service
            port:
              number: 9000
